--- a/i18n/Spanish.ini
+++ b/i18n/Spanish.ini
@@ -1,4 +1,4 @@
-HEADING_SIGNUP = "Sign Up"
-ERROR_SIGNUP_FAILED = "Signing up has failed."
-ACTION_SIGNUP_IN_PROGRESS = "Signing Up..."
-ACTION_SIGNUP = "Sign Up"
+HEADING_SIGNUP = "Registrarse"
+ERROR_SIGNUP_FAILED = "Registro fallido."
+ACTION_SIGNUP_IN_PROGRESS = "Registrando..."
+ACTION_SIGNUP = "Registrarse"
