--- a/i18n/Chinese-Simplified.ini
+++ b/i18n/Chinese-Simplified.ini
@@ -1,4 +1,4 @@
-HEADING_SIGNUP = "Sign Up"
-ERROR_SIGNUP_FAILED = "Signing up has failed."
-ACTION_SIGNUP_IN_PROGRESS = "Signing Up..."
-ACTION_SIGNUP = "Sign Up"
+HEADING_SIGNUP = "注册"
+ERROR_SIGNUP_FAILED = "注册失败。"
+ACTION_SIGNUP_IN_PROGRESS = "注册中..."
+ACTION_SIGNUP = "注册"
