Translation update: German

--- a/i18n/German.ini
+++ b/i18n/German.ini
@@ -1,4 +1,4 @@
-HEADING_SIGNUP = "Sign Up"
-ERROR_SIGNUP_FAILED = "Signing up has failed."
-ACTION_SIGNUP_IN_PROGRESS = "Signing Up..."
-ACTION_SIGNUP = "Sign Up"
+HEADING_SIGNUP = "Anmeldung"
+ERROR_SIGNUP_FAILED = "Die Anmeldung ist fehlgeschlagen."
+ACTION_SIGNUP_IN_PROGRESS = "Anmeldung..."
+ACTION_SIGNUP = "Anmeldung"
