--- a/i18n/Russian.ini
+++ b/i18n/Russian.ini
@@ -1,4 +1,4 @@
-HEADING_SIGNUP = "Sign Up"
-ERROR_SIGNUP_FAILED = "Signing up has failed."
-ACTION_SIGNUP_IN_PROGRESS = "Signing Up..."
-ACTION_SIGNUP = "Sign Up"
+HEADING_SIGNUP = "Регистрация"
+ERROR_SIGNUP_FAILED = "Ошибка при регистрации."
+ACTION_SIGNUP_IN_PROGRESS = "Регистрация..."
+ACTION_SIGNUP = "Регистрация"
